[gd_scene load_steps=15 format=3 uid="uid://buq8ry5ltmpwi"]

[ext_resource type="Script" path="res://Scripts/Interface/UIe_TargetTag.gd" id="1_f7718"]
[ext_resource type="Texture2D" uid="uid://c41fedgvhheau" path="res://Assets/Icons/Characters/ActorTags/icon_actortag_trajn0.png" id="2_demja"]
[ext_resource type="Material" uid="uid://cx26t2ua8a33n" path="res://Resource/Native Resource/Materials/Canvas/mat_CanvasAdd.tres" id="5_o0lx2"]
[ext_resource type="FontFile" uid="uid://re2wkah26pf3" path="res://Resource/Native Resource/Fonts/Base/Liberation/LiberationSerif-BoldItalic.ttf" id="9_4o2my"]
[ext_resource type="Texture2D" uid="uid://d0po6lrw2ubvb" path="res://Assets/Interface/ButtonAdornments/UIAdorn_TargetTag0.png" id="10_t00c6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im058"]
bg_color = Color(0.921569, 0.921569, 0.921569, 1)
border_width_bottom = 28
border_color = Color(0.760784, 0.760784, 0.760784, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0, 0, 0, 0.392157)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hkenj"]
font = ExtResource("9_4o2my")
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_offset = Vector2(2, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2eju8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qq76"]
bg_color = Color(0.717647, 0.717647, 0.717647, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1epyn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id="Animation_oi5eo"]
resource_name = "Expand"
length = 0.3
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, -1.5, -45, -0.2, -24.5, 0.25, 0, -45, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.380392, 0.380392, 0.380392, 0.784314), Color(0.894118, 0.894118, 0.894118, 0.784314), Color(0.894118, 0.894118, 0.894118, 0.784314)]
}

[sub_resource type="Animation" id="Animation_un44w"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.380392, 0.380392, 0.380392, 0.784314)]
}

[sub_resource type="Animation" id="Animation_w0yao"]
resource_name = "Contract"
length = 0.3
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-45, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Base:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Base/Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.894118, 0.894118, 0.894118, 0.784314), Color(0.196078, 0.196078, 0.196078, 0.784314), Color(0.380392, 0.380392, 0.380392, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a64ov"]
_data = {
"Contract": SubResource("Animation_w0yao"),
"Expand": SubResource("Animation_oi5eo"),
"RESET": SubResource("Animation_un44w")
}

[node name="TargetTag" type="Control"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 3
anchors_preset = 0
offset_right = 351.0
offset_bottom = 30.0
script = ExtResource("1_f7718")
allied_color = Color(0.29586, 0.681596, 1, 1)
enemy_color = Color(0.94, 0, 0.141, 1)
target_offset = Vector2(-45, 18)

[node name="Base" type="Control" parent="."]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 36.0
pivot_offset = Vector2(0, 21)

[node name="Back" type="Panel" parent="Base"]
modulate = Color(0.380392, 0.380392, 0.380392, 0.784314)
self_modulate = Color(0.29586, 0.681596, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_im058")

[node name="CharacterIcon" type="TextureRect" parent="Base"]
layout_mode = 0
offset_left = 8.0
offset_top = -1.0
offset_right = 337.0
offset_bottom = 35.0
texture = ExtResource("2_demja")
expand_mode = 1
stretch_mode = 4

[node name="Name" type="Label" parent="Base"]
layout_mode = 0
offset_left = 104.0
offset_top = -1.0
offset_right = 274.0
offset_bottom = 36.0
text = "Trajn"
label_settings = SubResource("LabelSettings_hkenj")
vertical_alignment = 1

[node name="Border" type="TextureRect" parent="Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_t00c6")
expand_mode = 1

[node name="AddName" type="Label" parent="Base"]
visible = false
layout_mode = 0
offset_left = 81.0
offset_top = 15.0
offset_right = 256.0
offset_bottom = 46.0
text = "A"
label_settings = SubResource("LabelSettings_hkenj")
vertical_alignment = 1

[node name="Button" type="Button" parent="Base"]
self_modulate = Color(1, 1, 1, 0.505882)
material = ExtResource("5_o0lx2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_2eju8")
theme_override_styles/hover = SubResource("StyleBoxFlat_7qq76")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1epyn")
button_mask = 3

[node name="Animator" type="AnimationPlayer" parent="."]
autoplay = "RESET"
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_a64ov")
}

[connection signal="button_up" from="Base/Button" to="." method="_on_button_up"]
